# y1_sdk_python

./: .gitignore  README.md
y1_ros/: build.sh
y1_ros/can_scripts/: imeta_y1_can.rules  search.sh  set_only_one_can.sh  set_rules.sh  start_can0.sh  start_can1.sh  start_can2.sh  start_can3.sh
y1_ros/control_scripts/: go_zero_position.sh  joint_position_control.sh
y1_ros/src/y1_controller/: CMakeLists.txt  package.xml
y1_ros/src/y1_controller/launch/: one_master.launch  one_master_slave.launch  one_slave.launch  single_arm.launch  single_arm_control.launch  two_arm_control.launch  two_master.launch  two_master_slave.launch
y1_ros/src/y1_controller/scripts/: y1_controller.py  y1_sdk_test.py
y1_ros/src/y1_controller/urdf/: y10804.urdf  y10824_ee.urdf
y1_ros/src/y1_description/: CMakeLists.txt  package.xml
y1_ros/src/y1_description/meshes1/: link7.STL  link8.STL
y1_ros/src/y1_description/meshes3/: gripper_base.STL  link7.STL  link8.STL
y1_ros/src/y1_description/rviz/: imeta_y1_ctrl.rviz
y1_ros/src/y1_description/urdf/: y1.urdf  y1.xacro  y1_with_01.urdf  y1_with_02.urdf  y1_with_02.xacro  y1_with_03.urdf
y1_ros/src/y1_msg/: CMakeLists.txt  package.xml
y1_ros/src/y1_msg/msg/: ArmEndPoseControl.msg  ArmJointPositionControl.msg  ArmStatus.msg
y1_ros/src/y1_teach_mode/normal_mode/: end_pose_play_trajectory.py  joint_position_play_trajectory.py  play_act_trajectory.py  play_trajectory.py  record_act_trajectory.py  record_trajectory.py
y1_ros/src/y1_teach_mode/teach_pose/: end_pose_play_pos.py  joint_position_play_pos.py  record_pos.py
y1_ros/src/y1_teach_mode/teach_trajectory/: end_pose_play_trajectory.py  (+2 more)
y1_sdk/: LICENSE  MANIFEST.in  README.md  build_sdk.md  pyproject.toml  setup.py  y1_sdk_interface.cpp
y1_sdk/y1_sdk/: __init__.py  y1_sdk_interface.h
(+2 files in other folders)
